compiler-core/src/parse/snapshots/gleam_core__parse__tests__reserved_derive.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 573
expression: const derive = 1
---

warning: Reserved word used
  ┌─ :1:7
  │
1 │ const derive = 1
  │       ^^^^^^

The word `derive` has been reserved for future use.

If you do not rename this then your code may stop working in
a future version of Gleam.

