compiler-core/src/parse/snapshots/gleam_core__parse__tests__reserved_else.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 578
expression: const else = 1
---

warning: Reserved word used
  ┌─ :1:7
  │
1 │ const else = 1
  │       ^^^^

The word `else` has been reserved for future use.

If you do not rename this then your code may stop working in
a future version of Gleam.

